--- a/EoMT/eomt_huggingface_inference.ipynb
+++ b/EoMT/eomt_huggingface_inference.ipynb
@@ -18,9 +18,54 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "836d61b1",
+   "metadata": {},
+   "source": [
+    "* Installation\n",
+    "\n",
+    "```bash\n",
+    "pip install torch torchvision\n",
+    "\n",
+    "# need transformers version >= 4.54.0 \n",
+    "pip install git+https://github.com/huggingface/transformers\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "2c3dfc75",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/pyml/anaconda3/envs/eomt/lib/python3.12/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'4.54.0.dev0'"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import transformers\n",
+    "transformers.__version__"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2c3dfc75",
+   "id": "c7387c68",
    "metadata": {},
    "outputs": [],
    "source": []
