EoMT: loading the model

--- a/EoMT/eomt_huggingface_inference.ipynb
+++ b/EoMT/eomt_huggingface_inference.ipynb
@@ -64,8 +64,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "c7387c68",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/pyml/anaconda3/envs/eomt/lib/python3.12/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    }
+   ],
+   "source": [
+    "import os\n",
+    "from PIL import Image\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "import torch\n",
+    "from transformers import EomtForUniversalSegmentation, AutoImageProcessor\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "100f5a24",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
+    "model_id = \"tue-mps/coco_panoptic_eomt_large_640\"\n",
+    "processor = AutoImageProcessor.from_pretrained(model_id)\n",
+    "model = EomtForUniversalSegmentation.from_pretrained(model_id)\n",
+    "\n",
+    "model.eval().to(device);"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2e9d3525",
    "metadata": {},
    "outputs": [],
    "source": []
