--- a/EoMT/eomt_huggingface_inference.ipynb
+++ b/EoMT/eomt_huggingface_inference.ipynb
@@ -103,8 +103,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "2e9d3525",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dict_keys(['segmentation', 'segments_info'])"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "image_path = \"../samples/plants.jpg\"\n",
+    "image = Image.open(image_path).convert(\"RGB\")\n",
+    "\n",
+    "inputs = processor(images=image, return_tensors=\"pt\")\n",
+    "inputs = inputs.to(device)\n",
+    "with torch.inference_mode():\n",
+    "    outputs = model(**inputs)\n",
+    "\n",
+    "original_image_sizes = [(image.height, image.width)]\n",
+    "preds = processor.post_process_panoptic_segmentation(outputs, original_image_sizes)\n",
+    "\n",
+    "preds[0].keys()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5bfaa477",
    "metadata": {},
    "outputs": [],
    "source": []
