--- a/AnomalyCLIP/anomalyclip_inference.ipynb
+++ b/AnomalyCLIP/anomalyclip_inference.ipynb
@@ -19,6 +19,24 @@
    "cell_type": "markdown",
    "id": "1d31c68f",
    "metadata": {},
+   "source": [
+    "```bash\n",
+    "git clone https://github.com/zqhang/AnomalyCLIP.git AnomalyCLIP_repo\n",
+    "\n",
+    "conda create --name anomalyclip python=3.10 -y\n",
+    "conda activate anomalyclip\n",
+    "\n",
+    "pip install -r AnomalyCLIP_repo/requirements.txt \n",
+    "pip install thop ftfy regex tabulate opencv-python\n",
+    "\n",
+    "pip install \"numpy<2\"\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "559bdadd",
+   "metadata": {},
    "source": []
   }
  ],
