AnomalyCLIP: transform functions

--- a/AnomalyCLIP/anomalyclip_inference.ipynb
+++ b/AnomalyCLIP/anomalyclip_inference.ipynb
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "c21a7d32",
    "metadata": {},
    "outputs": [
@@ -102,6 +102,7 @@
     "n_ctx = 12\n",
     "depth = 9\n",
     "t_n_ctx = 4\n",
+    "image_size = 518\n",
     "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
     "\n",
     "AnomalyCLIP_parameters = {\n",
@@ -122,6 +123,46 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "c25190c0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import torchvision.transforms as transforms\n",
+    "from AnomalyCLIP_lib.transform import image_transform\n",
+    "from AnomalyCLIP_lib.constants import (\n",
+    "    OPENAI_DATASET_MEAN, OPENAI_DATASET_STD\n",
+    ")\n",
+    "\n",
+    "def get_transform(image_size,):\n",
+    "    preprocess = image_transform(\n",
+    "        image_size,\n",
+    "        is_train=False,\n",
+    "        mean=OPENAI_DATASET_MEAN,\n",
+    "        std=OPENAI_DATASET_STD\n",
+    "    )\n",
+    "    target_transform = transforms.Compose([\n",
+    "        transforms.Resize((image_size, image_size)),\n",
+    "        transforms.CenterCrop(image_size),\n",
+    "        transforms.ToTensor()\n",
+    "    ])\n",
+    "    preprocess.transforms[0] = transforms.Resize(\n",
+    "        size=(image_size, image_size),\n",
+    "        interpolation=transforms.InterpolationMode.BICUBIC,\n",
+    "        max_size=None,\n",
+    "        antialias=None\n",
+    "    )\n",
+    "    preprocess.transforms[1] = transforms.CenterCrop(\n",
+    "        size=(image_size, image_size)\n",
+    "    )\n",
+    "    return preprocess, target_transform\n",
+    "\n",
+    "\n",
+    "preprocess, target_transform = get_transform(image_size)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "908bea47",
    "metadata": {},
    "outputs": [],
    "source": []
