AnomalyCLIP: prompt-learner

--- a/AnomalyCLIP/anomalyclip_inference.ipynb
+++ b/AnomalyCLIP/anomalyclip_inference.ipynb
@@ -103,6 +103,12 @@
     "depth = 9\n",
     "t_n_ctx = 4\n",
     "image_size = 518\n",
+    "features_list = [6, 12, 18, 24]\n",
+    "feature_map_layer = [0, 1, 2, 3]\n",
+    "checkpoint_path = (\n",
+    "    \"AnomalyCLIP_repo/checkpoints/\"\n",
+    "    \"9_12_4_multiscale/epoch_15.pth\"\n",
+    ")\n",
     "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
     "\n",
     "AnomalyCLIP_parameters = {\n",
@@ -122,6 +128,55 @@
   {
    "cell_type": "code",
    "execution_count": 3,
+   "id": "6862cda7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Initializing class-specific contexts\n",
+      "single_para torch.Size([4, 768])\n",
+      "single_para torch.Size([4, 768])\n",
+      "single_para torch.Size([4, 768])\n",
+      "single_para torch.Size([4, 768])\n",
+      "single_para torch.Size([4, 768])\n",
+      "single_para torch.Size([4, 768])\n",
+      "single_para torch.Size([4, 768])\n",
+      "single_para torch.Size([4, 768])\n",
+      "embedding_pos torch.Size([1, 77, 768])\n",
+      "tokenized_prompts shape torch.Size([1, 1, 77]) torch.Size([1, 1, 77])\n"
+     ]
+    }
+   ],
+   "source": [
+    "prompt_learner = AnomalyCLIP_PromptLearner(\n",
+    "    model.to(\"cpu\"), AnomalyCLIP_parameters\n",
+    ")\n",
+    "checkpoint = torch.load(checkpoint_path)\n",
+    "prompt_learner.load_state_dict(checkpoint[\"prompt_learner\"])\n",
+    "prompt_learner.to(device)\n",
+    "model.to(device)\n",
+    "model.visual.DAPM_replace(DPAM_layer=20)\n",
+    "\n",
+    "prompts, tokenized_prompts, compound_prompts_text = prompt_learner(\n",
+    "    cls_id=None\n",
+    ")\n",
+    "text_features = model.encode_text_learn(\n",
+    "    prompts,\n",
+    "    tokenized_prompts,\n",
+    "    compound_prompts_text\n",
+    ").float()\n",
+    "text_features = torch.stack(\n",
+    "    torch.chunk(text_features, dim=0, chunks=2),\n",
+    "    dim=1\n",
+    ")\n",
+    "text_features /= text_features.norm(dim=-1, keepdim=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "id": "c25190c0",
    "metadata": {},
    "outputs": [
@@ -132,7 +187,7 @@
       "Compose(\n",
       "    Resize(size=(518, 518), interpolation=bicubic, max_size=None, antialias=None)\n",
       "    CenterCrop(size=(518, 518))\n",
-      "    <function _convert_to_rgb at 0x7f5433c111b0>\n",
+      "    <function _convert_to_rgb at 0x7f1135edd120>\n",
       "    ToTensor()\n",
       "    Normalize(mean=(0.48145466, 0.4578275, 0.40821073), std=(0.26862954, 0.26130258, 0.27577711))\n",
       ")\n",
@@ -182,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "id": "908bea47",
    "metadata": {},
    "outputs": [
