--- a/AnomalyCLIP/anomalyclip_inference.ipynb
+++ b/AnomalyCLIP/anomalyclip_inference.ipynb
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "c21a7d32",
    "metadata": {},
    "outputs": [
@@ -102,6 +102,7 @@
     "n_ctx = 12\n",
     "depth = 9\n",
     "t_n_ctx = 4\n",
+    "sigma = 4\n",
     "image_size = 518\n",
     "features_list = [6, 12, 18, 24]\n",
     "feature_map_layer = [0, 1, 2, 3]\n",
@@ -275,6 +276,55 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "be84f92b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([0.9996])\n",
+      "torch.Size([1, 518, 518])\n"
+     ]
+    }
+   ],
+   "source": [
+    "image_tensor = rgb_transform(image)\n",
+    "image_tensor = image_tensor.to(device).unsqueeze(0)\n",
+    "\n",
+    "with torch.no_grad():\n",
+    "    image_features, patch_features = model.encode_image(\n",
+    "        image_tensor, features_list, DPAM_layer=20\n",
+    "    )\n",
+    "    image_features /= image_features.norm(dim=-1, keepdim=True)\n",
+    "\n",
+    "    text_probs = image_features @ text_features.permute(0, 2, 1)\n",
+    "    text_probs = (text_probs / 0.07).softmax(-1)\n",
+    "    text_probs = text_probs[:, 0, 1]\n",
+    "    anomaly_map_list = []\n",
+    "    for idx, patch_feature in enumerate(patch_features):\n",
+    "        if idx >= feature_map_layer[0]:\n",
+    "            patch_feature /= patch_feature.norm(dim=-1, keepdim=True)\n",
+    "            similarity, _ = AnomalyCLIP_lib.compute_similarity(patch_feature, text_features[0])\n",
+    "            similarity_map = AnomalyCLIP_lib.get_similarity_map(similarity[:, 1:, :], image_size)\n",
+    "            anomaly_map = (similarity_map[..., 1] + 1 - similarity_map[..., 0]) / 2.0\n",
+    "            # The following code is equivalent.\n",
+    "            # anomaly_map = similarity_map[...,1] \n",
+    "            anomaly_map_list.append(anomaly_map)\n",
+    "\n",
+    "    anomaly_map = torch.stack(anomaly_map_list)\n",
+    "\n",
+    "    anomaly_map = anomaly_map.sum(dim=0)\n",
+    "    anomaly_map = torch.stack([torch.from_numpy(gaussian_filter(i, sigma=sigma)) for i in anomaly_map.detach().cpu()], dim = 0 )\n",
+    "    # visualizer(items['img_path'], anomaly_map.detach().cpu().numpy(), args.image_size, args.save_path, cls_name)\n",
+    "\n",
+    "print(text_probs.detach().cpu())\n",
+    "print(anomaly_map.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "067ce2b8",
    "metadata": {},
    "outputs": [],
    "source": []
