GLIDE: screenshot examples

--- a/GLIDE/glide_inference.ipynb
+++ b/GLIDE/glide_inference.ipynb
@@ -11,7 +11,9 @@
     "**GLIDE: Towards Photorealistic Image Generation and Editing with Text-Guided Diffusion Models**\n",
     "\n",
     " * Paper: https://arxiv.org/abs/2112.10741\n",
-    " * Code: https://github.com/openai/glide-text2im\n"
+    " * Code: https://github.com/openai/glide-text2im\n",
+    "\n",
+    "![GLIDE Examples](../assets/glide_examples.jpg)"
    ]
   },
   {
