--- a/GLIDE/glide_inference.ipynb
+++ b/GLIDE/glide_inference.ipynb
@@ -13,7 +13,15 @@
     " * Paper: https://arxiv.org/abs/2112.10741\n",
     " * Code: https://github.com/openai/glide-text2im\n",
     "\n",
-    "![GLIDE Examples](../assets/glide_examples.jpg)"
+    "![GLIDE Examples](../assets/glide_examples.jpg)\n",
+    "\n",
+    "\n",
+    "```bash\n",
+    "conda create -n glide python=3.11 -y\n",
+    "conda activate glide\n",
+    "pip install git+https://github.com/openai/glide-text2im\n",
+    "pip install pyyaml\n",
+    "```"
    ]
   },
   {
