GLIDE: helper functions

--- a/GLIDE/glide_inference.ipynb
+++ b/GLIDE/glide_inference.ipynb
@@ -129,9 +129,139 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "61a0e1f8",
+   "metadata": {},
+   "source": [
+    "### Helper function: Sample from base"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "e13cfb2a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "##############################\n",
+    "# Sample from the base model #\n",
+    "##############################\n",
+    " \n",
+    "def sample_base(prompt, batch_size=1, guidance_scale=3.0):\n",
+    "    # Create the text tokens to feed to the model.\n",
+    "    tokens = model.tokenizer.encode(prompt)\n",
+    "    tokens, mask = model.tokenizer.padded_tokens_and_mask(\n",
+    "        tokens, options['text_ctx']\n",
+    "    )\n",
+    "\n",
+    "    # Create the classifier-free guidance tokens (empty)\n",
+    "    full_batch_size = batch_size * 2\n",
+    "    uncond_tokens, uncond_mask = model.tokenizer.padded_tokens_and_mask(\n",
+    "        [], options['text_ctx']\n",
+    "    )\n",
+    "\n",
+    "    # Pack the tokens together into model kwargs.\n",
+    "    model_kwargs = dict(\n",
+    "        tokens=torch.tensor(\n",
+    "            [tokens] * batch_size + [uncond_tokens] * batch_size, device=device\n",
+    "        ),\n",
+    "        mask=torch.tensor(\n",
+    "            [mask] * batch_size + [uncond_mask] * batch_size,\n",
+    "            dtype=torch.bool,\n",
+    "            device=device,\n",
+    "        ),\n",
+    "    )\n",
+    "\n",
+    "    # Create a classifier-free guidance sampling function\n",
+    "    def model_fn(x_t, ts, **kwargs):\n",
+    "        half = x_t[: len(x_t) // 2]\n",
+    "        combined = torch.cat([half, half], dim=0)\n",
+    "        model_out = model(combined, ts, **kwargs)\n",
+    "        eps, rest = model_out[:, :3], model_out[:, 3:]\n",
+    "        cond_eps, uncond_eps = torch.split(eps, len(eps) // 2, dim=0)\n",
+    "        half_eps = uncond_eps + guidance_scale * (cond_eps - uncond_eps)\n",
+    "        eps = torch.cat([half_eps, half_eps], dim=0)\n",
+    "        return torch.cat([eps, rest], dim=1)\n",
+    "\n",
+    "    # Sample from the base model.\n",
+    "    model.del_cache()\n",
+    "    samples = diffusion.p_sample_loop(\n",
+    "        model_fn,\n",
+    "        (full_batch_size, 3, options[\"image_size\"], options[\"image_size\"]),\n",
+    "        device=device,\n",
+    "        clip_denoised=True,\n",
+    "        progress=True,\n",
+    "        model_kwargs=model_kwargs,\n",
+    "        cond_fn=None,\n",
+    "    )[:batch_size]\n",
+    "    model.del_cache()\n",
+    "\n",
+    "    return samples"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b0b0dd71",
+   "metadata": {},
+   "source": [
+    "### Helper function: Upsample"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "1ad9551b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "##############################\n",
+    "# Upsample the 64x64 samples #\n",
+    "##############################\n",
+    "\n",
+    "def upsample(samples, prompt, batch_size=1, upsample_temp=0.997):\n",
+    "    tokens = model_up.tokenizer.encode(prompt)\n",
+    "    tokens, mask = model_up.tokenizer.padded_tokens_and_mask(\n",
+    "        tokens, options_up['text_ctx']\n",
+    "    )\n",
+    "\n",
+    "    # Create the model conditioning dict.\n",
+    "    model_kwargs = dict(\n",
+    "        # Low-res image to upsample.\n",
+    "        low_res=((samples+1)*127.5).round()/127.5 - 1,\n",
+    "\n",
+    "        # Text tokens\n",
+    "        tokens=torch.tensor(\n",
+    "            [tokens] * batch_size, device=device\n",
+    "        ),\n",
+    "        mask=torch.tensor(\n",
+    "            [mask] * batch_size,\n",
+    "            dtype=torch.bool,\n",
+    "            device=device,\n",
+    "        ),\n",
+    "    )\n",
+    "\n",
+    "    # Sample from the base model.\n",
+    "    model_up.del_cache()\n",
+    "    up_shape = (batch_size, 3, options_up[\"image_size\"], options_up[\"image_size\"])\n",
+    "    up_samples = diffusion_up.ddim_sample_loop(\n",
+    "        model_up,\n",
+    "        up_shape,\n",
+    "        noise=torch.randn(up_shape, device=device) * upsample_temp,\n",
+    "        device=device,\n",
+    "        clip_denoised=True,\n",
+    "        progress=True,\n",
+    "        model_kwargs=model_kwargs,\n",
+    "        cond_fn=None,\n",
+    "    )[:batch_size]\n",
+    "    model_up.del_cache()\n",
+    "\n",
+    "    return up_samples"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e2d50b47",
+   "id": "6a3df69a",
    "metadata": {},
    "outputs": [],
    "source": []
