ControlNet: helper function for inference

--- a/ControlNet/controlnet_inference.ipynb
+++ b/ControlNet/controlnet_inference.ipynb
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "89ad67ea",
    "metadata": {},
    "outputs": [
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "e77465c5",
    "metadata": {},
    "outputs": [
@@ -119,6 +119,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "No module 'xformers'. Proceeding without it.\n",
       "ControlLDM: Running in eps-prediction mode\n",
       "DiffusionWrapper has 859.52 M params.\n",
       "making attention of type 'vanilla' with 512 in_channels\n",
@@ -150,7 +151,65 @@
    "id": "4dc61e58",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def process(\n",
+    "        input_image,\n",
+    "        edge_map,\n",
+    "        prompt,\n",
+    "        a_prompt,\n",
+    "        n_prompt,\n",
+    "        num_samples=1,\n",
+    "        image_resolution=512,\n",
+    "        ddim_steps=20,\n",
+    "        guess_mode=False,\n",
+    "        strength=1.0,\n",
+    "        scale=9.0,\n",
+    "        seed=1,\n",
+    "        eta=0.0\n",
+    "    ):\n",
+    "    with torch.no_grad():\n",
+    "        img = resize_image(HWC3(input_image), image_resolution)\n",
+    "        H, W, C = img.shape\n",
+    "\n",
+    "        edge_map = HWC3(edge_map)\n",
+    "\n",
+    "        control = torch.from_numpy(edge_map.copy()).float().cuda() / 255.0\n",
+    "        control = torch.stack([control for _ in range(num_samples)], dim=0)\n",
+    "        control = einops.rearrange(control, 'b h w c -> b c h w').clone()\n",
+    "\n",
+    "        if seed == -1:\n",
+    "            seed = random.randint(0, 65535)\n",
+    "        seed_everything(seed)\n",
+    "\n",
+    "        if config.save_memory:\n",
+    "            model.low_vram_shift(is_diffusing=False)\n",
+    "\n",
+    "        cond = {\"c_concat\": [control], \"c_crossattn\": [model.get_learned_conditioning([prompt + ', ' + a_prompt] * num_samples)]}\n",
+    "        un_cond = {\"c_concat\": None if guess_mode else [control], \"c_crossattn\": [model.get_learned_conditioning([n_prompt] * num_samples)]}\n",
+    "        shape = (4, H // 8, W // 8)\n",
+    "\n",
+    "        if config.save_memory:\n",
+    "            model.low_vram_shift(is_diffusing=True)\n",
+    "\n",
+    "        model.control_scales = [strength * (0.825 ** float(12 - i)) for i in range(13)] if guess_mode else ([strength] * 13)  # Magic number. IDK why. Perhaps because 0.825**12<0.01 but 0.826**12>0.01\n",
+    "        samples, intermediates = ddim_sampler.sample(\n",
+    "            ddim_steps, num_samples,\n",
+    "            shape, cond, verbose=False, eta=eta,\n",
+    "            unconditional_guidance_scale=scale,\n",
+    "            unconditional_conditioning=un_cond\n",
+    "        )\n",
+    "\n",
+    "        if config.save_memory:\n",
+    "            model.low_vram_shift(is_diffusing=False)\n",
+    "\n",
+    "        x_samples = model.decode_first_stage(samples)\n",
+    "        x_samples = (\n",
+    "            einops.rearrange(x_samples, 'b c h w -> b h w c') * 127.5 + 127.5\n",
+    "        ).cpu().numpy().clip(0, 255).astype(np.uint8)\n",
+    "\n",
+    "        results = [x_samples[i] for i in range(num_samples)]\n",
+    "    return [255 - edge_map] + results"
+   ]
   }
  ],
  "metadata": {
