--- a/ControlNet/controlnet_inference.ipynb
+++ b/ControlNet/controlnet_inference.ipynb
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "89ad67ea",
    "metadata": {},
    "outputs": [
@@ -101,7 +101,7 @@
     "from pytorch_lightning import seed_everything\n",
     "\n",
     "from annotator.util import resize_image, HWC3\n",
-    "#from annotator.canny import CannyDetector\n",
+    "from annotator.canny import CannyDetector\n",
     "from cldm.model import create_model, load_state_dict\n",
     "from cldm.ddim_hacked import DDIMSampler\n",
     "\n",
@@ -147,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "4dc61e58",
    "metadata": {},
    "outputs": [],
@@ -171,6 +171,7 @@
     "        img = resize_image(HWC3(input_image), image_resolution)\n",
     "        H, W, C = img.shape\n",
     "\n",
+    "        edge_map = resize_image(HWC3(edge_map), image_resolution)\n",
     "        edge_map = HWC3(edge_map)\n",
     "\n",
     "        control = torch.from_numpy(edge_map.copy()).float().cuda() / 255.0\n",
@@ -210,6 +211,70 @@
     "        results = [x_samples[i] for i in range(num_samples)]\n",
     "    return [255 - edge_map] + results"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "acfad636",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Global seed set to 1\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Data shape for DDIM sampling is (1, 4, 72, 64), eta 0.0\n",
+      "Running DDIM Sampling with 20 timesteps\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "DDIM Sampler:  70%|███████   | 14/20 [00:03<00:01,  4.12it/s]"
+     ]
+    }
+   ],
+   "source": [
+    "image_path = \"../samples/plants.jpg\"\n",
+    "input_image = cv2.imread(image_path)\n",
+    "\n",
+    "# generate edge map using Canny edge detector\n",
+    "detector = CannyDetector()\n",
+    "detected_map = detector(input_image, low_threshold=100, high_threshold=200)\n",
+    "\n",
+    "res = process(\n",
+    "    input_image=input_image,\n",
+    "    edge_map=detected_map,\n",
+    "    prompt=\"A photo of a plant\",\n",
+    "    a_prompt=\"Aesthetic\",\n",
+    "    n_prompt=\"Blurry\",\n",
+    "    num_samples=1,\n",
+    "    image_resolution=512,\n",
+    "    ddim_steps=20,\n",
+    "    guess_mode=False,\n",
+    "    strength=1.0,\n",
+    "    scale=9.0,\n",
+    "    seed=1,\n",
+    "    eta=0.0\n",
+    ")\n",
+    "\n",
+    "print(len(res))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e83ad17f",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
