BART: screenshots from paper

--- a/BART/bart_huggingface_inference.ipynb
+++ b/BART/bart_huggingface_inference.ipynb
@@ -10,7 +10,17 @@
     "\n",
     "**BART: Denoising Sequence-to-Sequence Pre-training for Natural Language Generation, Translation, and Comprehension**\n",
     "\n",
-    " * Paper: https://arxiv.org/pdf/1910.13461\n"
+    " * Paper: https://arxiv.org/pdf/1910.13461\n",
+    "\n",
+    "\n",
+    "**BERT vs GPT vs BART** \n",
+    "![BERT vs GPT vs BART](../assets/bert_gpt_bart.png)\n",
+    "\n",
+    "**BART Noising Transformations**\n",
+    "![BART Noising Transformations](../assets/bart_noising.png)\n",
+    "\n",
+    "**BART Inference: classification, translation**\n",
+    "![BART Inferebce](../assets/bart_inference_overview.png)"
    ]
   },
   {
