--- a/BART/bart_huggingface_inference.ipynb
+++ b/BART/bart_huggingface_inference.ipynb
@@ -25,14 +25,137 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1ce9b329",
+   "id": "90bcda7b",
    "metadata": {},
+   "source": [
+    " * Installation\n",
+    "\n",
+    "```bash\n",
+    "pip install torch transformers\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "bdc6987c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import torch\n",
+    "from transformers import AutoTokenizer, BartForConditionalGeneration\n",
+    "\n",
+    "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
+    "\n",
+    "tokenizer = AutoTokenizer.from_pretrained(\n",
+    "    \"facebook/bart-large-cnn\"\n",
+    ")\n",
+    "model = BartForConditionalGeneration.from_pretrained(\n",
+    "    \"facebook/bart-large-cnn\"\n",
+    ")\n",
+    "\n",
+    "model.eval().to(device);"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "f260d8f0",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "BartForConditionalGeneration(\n",
+       "  (model): BartModel(\n",
+       "    (shared): BartScaledWordEmbedding(50264, 1024, padding_idx=1)\n",
+       "    (encoder): BartEncoder(\n",
+       "      (embed_tokens): BartScaledWordEmbedding(50264, 1024, padding_idx=1)\n",
+       "      (embed_positions): BartLearnedPositionalEmbedding(1026, 1024)\n",
+       "      (layers): ModuleList(\n",
+       "        (0-11): 12 x BartEncoderLayer(\n",
+       "          (self_attn): BartAttention(\n",
+       "            (k_proj): Linear(in_features=1024, out_features=1024, bias=True)\n",
+       "            (v_proj): Linear(in_features=1024, out_features=1024, bias=True)\n",
+       "            (q_proj): Linear(in_features=1024, out_features=1024, bias=True)\n",
+       "            (out_proj): Linear(in_features=1024, out_features=1024, bias=True)\n",
+       "          )\n",
+       "          (self_attn_layer_norm): LayerNorm((1024,), eps=1e-05, elementwise_affine=True)\n",
+       "          (activation_fn): GELUActivation()\n",
+       "          (fc1): Linear(in_features=1024, out_features=4096, bias=True)\n",
+       "          (fc2): Linear(in_features=4096, out_features=1024, bias=True)\n",
+       "          (final_layer_norm): LayerNorm((1024,), eps=1e-05, elementwise_affine=True)\n",
+       "        )\n",
+       "      )\n",
+       "      (layernorm_embedding): LayerNorm((1024,), eps=1e-05, elementwise_affine=True)\n",
+       "    )\n",
+       "    (decoder): BartDecoder(\n",
+       "      (embed_tokens): BartScaledWordEmbedding(50264, 1024, padding_idx=1)\n",
+       "      (embed_positions): BartLearnedPositionalEmbedding(1026, 1024)\n",
+       "      (layers): ModuleList(\n",
+       "        (0-11): 12 x BartDecoderLayer(\n",
+       "          (self_attn): BartAttention(\n",
+       "            (k_proj): Linear(in_features=1024, out_features=1024, bias=True)\n",
+       "            (v_proj): Linear(in_features=1024, out_features=1024, bias=True)\n",
+       "            (q_proj): Linear(in_features=1024, out_features=1024, bias=True)\n",
+       "            (out_proj): Linear(in_features=1024, out_features=1024, bias=True)\n",
+       "          )\n",
+       "          (activation_fn): GELUActivation()\n",
+       "          (self_attn_layer_norm): LayerNorm((1024,), eps=1e-05, elementwise_affine=True)\n",
+       "          (encoder_attn): BartAttention(\n",
+       "            (k_proj): Linear(in_features=1024, out_features=1024, bias=True)\n",
+       "            (v_proj): Linear(in_features=1024, out_features=1024, bias=True)\n",
+       "            (q_proj): Linear(in_features=1024, out_features=1024, bias=True)\n",
+       "            (out_proj): Linear(in_features=1024, out_features=1024, bias=True)\n",
+       "          )\n",
+       "          (encoder_attn_layer_norm): LayerNorm((1024,), eps=1e-05, elementwise_affine=True)\n",
+       "          (fc1): Linear(in_features=1024, out_features=4096, bias=True)\n",
+       "          (fc2): Linear(in_features=4096, out_features=1024, bias=True)\n",
+       "          (final_layer_norm): LayerNorm((1024,), eps=1e-05, elementwise_affine=True)\n",
+       "        )\n",
+       "      )\n",
+       "      (layernorm_embedding): LayerNorm((1024,), eps=1e-05, elementwise_affine=True)\n",
+       "    )\n",
+       "  )\n",
+       "  (lm_head): Linear(in_features=1024, out_features=50264, bias=False)\n",
+       ")"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "760bd6bd",
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "bart",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.12.11"
   }
  },
  "nbformat": 4,
