BART: inference - summarization

--- a/BART/bart_huggingface_inference.ipynb
+++ b/BART/bart_huggingface_inference.ipynb
@@ -36,104 +36,81 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 3,
-   "id": "bdc6987c",
+   "cell_type": "markdown",
+   "id": "26451b20",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "import torch\n",
-    "from transformers import AutoTokenizer, BartForConditionalGeneration\n",
-    "\n",
-    "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
-    "\n",
-    "tokenizer = AutoTokenizer.from_pretrained(\n",
-    "    \"facebook/bart-large-cnn\"\n",
-    ")\n",
-    "model = BartForConditionalGeneration.from_pretrained(\n",
-    "    \"facebook/bart-large-cnn\"\n",
-    ")\n",
-    "\n",
-    "model.eval().to(device);"
+    "### Summarization"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "f260d8f0",
+   "id": "b3251310",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "BartForConditionalGeneration(\n",
-       "  (model): BartModel(\n",
-       "    (shared): BartScaledWordEmbedding(50264, 1024, padding_idx=1)\n",
-       "    (encoder): BartEncoder(\n",
-       "      (embed_tokens): BartScaledWordEmbedding(50264, 1024, padding_idx=1)\n",
-       "      (embed_positions): BartLearnedPositionalEmbedding(1026, 1024)\n",
-       "      (layers): ModuleList(\n",
-       "        (0-11): 12 x BartEncoderLayer(\n",
-       "          (self_attn): BartAttention(\n",
-       "            (k_proj): Linear(in_features=1024, out_features=1024, bias=True)\n",
-       "            (v_proj): Linear(in_features=1024, out_features=1024, bias=True)\n",
-       "            (q_proj): Linear(in_features=1024, out_features=1024, bias=True)\n",
-       "            (out_proj): Linear(in_features=1024, out_features=1024, bias=True)\n",
-       "          )\n",
-       "          (self_attn_layer_norm): LayerNorm((1024,), eps=1e-05, elementwise_affine=True)\n",
-       "          (activation_fn): GELUActivation()\n",
-       "          (fc1): Linear(in_features=1024, out_features=4096, bias=True)\n",
-       "          (fc2): Linear(in_features=4096, out_features=1024, bias=True)\n",
-       "          (final_layer_norm): LayerNorm((1024,), eps=1e-05, elementwise_affine=True)\n",
-       "        )\n",
-       "      )\n",
-       "      (layernorm_embedding): LayerNorm((1024,), eps=1e-05, elementwise_affine=True)\n",
-       "    )\n",
-       "    (decoder): BartDecoder(\n",
-       "      (embed_tokens): BartScaledWordEmbedding(50264, 1024, padding_idx=1)\n",
-       "      (embed_positions): BartLearnedPositionalEmbedding(1026, 1024)\n",
-       "      (layers): ModuleList(\n",
-       "        (0-11): 12 x BartDecoderLayer(\n",
-       "          (self_attn): BartAttention(\n",
-       "            (k_proj): Linear(in_features=1024, out_features=1024, bias=True)\n",
-       "            (v_proj): Linear(in_features=1024, out_features=1024, bias=True)\n",
-       "            (q_proj): Linear(in_features=1024, out_features=1024, bias=True)\n",
-       "            (out_proj): Linear(in_features=1024, out_features=1024, bias=True)\n",
-       "          )\n",
-       "          (activation_fn): GELUActivation()\n",
-       "          (self_attn_layer_norm): LayerNorm((1024,), eps=1e-05, elementwise_affine=True)\n",
-       "          (encoder_attn): BartAttention(\n",
-       "            (k_proj): Linear(in_features=1024, out_features=1024, bias=True)\n",
-       "            (v_proj): Linear(in_features=1024, out_features=1024, bias=True)\n",
-       "            (q_proj): Linear(in_features=1024, out_features=1024, bias=True)\n",
-       "            (out_proj): Linear(in_features=1024, out_features=1024, bias=True)\n",
-       "          )\n",
-       "          (encoder_attn_layer_norm): LayerNorm((1024,), eps=1e-05, elementwise_affine=True)\n",
-       "          (fc1): Linear(in_features=1024, out_features=4096, bias=True)\n",
-       "          (fc2): Linear(in_features=4096, out_features=1024, bias=True)\n",
-       "          (final_layer_norm): LayerNorm((1024,), eps=1e-05, elementwise_affine=True)\n",
-       "        )\n",
-       "      )\n",
-       "      (layernorm_embedding): LayerNorm((1024,), eps=1e-05, elementwise_affine=True)\n",
-       "    )\n",
-       "  )\n",
-       "  (lm_head): Linear(in_features=1024, out_features=50264, bias=False)\n",
-       ")"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Truncation was not explicitly activated but `max_length` is provided a specific value, please use `truncation=True` to explicitly truncate examples to max length. Defaulting to 'longest_first' truncation strategy. If you encode pairs of sequences (GLUE-style) with the tokenizer you can select this strategy more precisely by providing a specific strategy to `truncation`.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Mars is the fourth planet from the Sun and is often referred to as the \"Red\n"
+     ]
     }
    ],
    "source": [
-    "model"
+    "import torch\n",
+    "from transformers import BartTokenizer, BartForConditionalGeneration\n",
+    "\n",
+    "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
+    "tokenizer = BartTokenizer.from_pretrained(\"facebook/bart-large-cnn\")\n",
+    "model = BartForConditionalGeneration.from_pretrained(\"facebook/bart-large-cnn\")\n",
+    "model.eval().to(device)\n",
+    "\n",
+    "# Input article\n",
+    "ARTICLE_TO_SUMMARIZE = (\n",
+    "    \"Mars is the fourth planet from the Sun and is often \"\n",
+    "    'referred to as the \"Red Planet\" due to its reddish appearance. '\n",
+    "    \"reversedIt has the tallest volcano in the solar system, \"\n",
+    "    \"Olympus Mons, and the deepest canyon, Valles Marineris. \"\n",
+    "    \"Mars has seasons like Earth, polar ice caps, and signs that \"\n",
+    "    \"liquid water once flowed on its surface. \"\n",
+    "    \"Scientists are especially interested in Mars because \"\n",
+    "    \"of its potential to have supported life in the past. \"\n",
+    "    \"NASA’s Perseverance rover is currently exploring \"\n",
+    "    \"the Martian surface, collecting soil samples and \"\n",
+    "    \"searching for signs of ancient microbes. \"\n",
+    "    \"Multiple missions by various space agencies have aimed \"\n",
+    "    \"to study Mars’ geology, climate, and suitability \"\n",
+    "    \"for human colonization in the future.\"\n",
+    ")\n",
+    "\n",
+    "# Tokenize and move input to same device as model\n",
+    "inputs = tokenizer([ARTICLE_TO_SUMMARIZE], max_length=1024, return_tensors=\"pt\").to(device)\n",
+    "\n",
+    "# Generate summary\n",
+    "summary_ids = model.generate(\n",
+    "    inputs[\"input_ids\"],\n",
+    "    num_beams=2,\n",
+    "    min_length=0,\n",
+    "    max_length=20\n",
+    ")\n",
+    "\n",
+    "# Decode\n",
+    "summary = tokenizer.batch_decode(summary_ids, skip_special_tokens=True, clean_up_tokenization_spaces=False)[0]\n",
+    "print(summary)\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "760bd6bd",
+   "id": "ac32a701",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -141,7 +118,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "bart",
+   "display_name": "py310",
    "language": "python",
    "name": "python3"
   },
@@ -155,7 +132,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.11"
+   "version": "3.10.18"
   }
  },
  "nbformat": 4,
